[gd_scene load_steps=3 format=3 uid="uid://rhbdiixguovr"]

[ext_resource type="Script" path="res://COGITO/EasyMenus/Scenes/rebind_menu.gd" id="1_6u1yv"]

[sub_resource type="LabelSettings" id="LabelSettings_ldi5p"]
font_size = 24

[node name="RebindMenu" type="MarginContainer"]
script = ExtResource("1_6u1yv")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Graphics" type="MarginContainer" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="Panel" type="Panel" parent="CenterContainer/Graphics"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Graphics/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RebindTitle" type="Label" parent="CenterContainer/Graphics/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0
text = "Action Name Title"
label_settings = SubResource("LabelSettings_ldi5p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Graphics/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputText" type="Label" parent="CenterContainer/Graphics/Panel/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveDialog" type="VBoxContainer" parent="CenterContainer/Graphics/Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SaveLabel" type="Label" parent="CenterContainer/Graphics/Panel/VBoxContainer/SaveDialog"]
layout_mode = 2
size_flags_vertical = 1
text = "Save?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Graphics/Panel/VBoxContainer/SaveDialog"]
layout_mode = 2
size_flags_horizontal = 4

[node name="YesButton" type="Button" parent="CenterContainer/Graphics/Panel/VBoxContainer/SaveDialog/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Yes"

[node name="NoButton" type="Button" parent="CenterContainer/Graphics/Panel/VBoxContainer/SaveDialog/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "No"
